--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 			<script src="js/jquery.base64.min.js"></script>
 			
 			
-		<script type="text/javascript" src="js/iscroll.js"></script>
+		<script type="text/javascript" src="js/iscroll4.js"></script>
 
 
 <style type="text/css" media="all">
