--- a/www/index.html
+++ b/www/index.html
@@ -385,6 +385,8 @@
 			<table align="center" width="100%" valign="center" border="0"><tr><td></td></tr><tr><td align="center" valign="center"><img src="img/logo.png"  height="36px"></td></tr>
 			</table>
 		</div>
+        
+        <div class="spinner" id="spinner"></div>
 		
 	<center>
 		
