--- a/www/index.html
+++ b/www/index.html
@@ -462,31 +462,31 @@
 	
 	<table width="" align="center">
 	<tr>
-	  <td align="left" width="80"><img src="img/ico_audio_live.png" width="65"></td><td align="left" width="100%"> <a id="mediacattura" >REC AUDIO</a></td>
+	  <td align="left" width="80"><a id="mediacattura" ><img src="img/ico_audio_live.png" width="65"></a></td><td align="left" width="100%">&nbsp;REC AUDIO</td>
 	</tr>
 	<tr>
 		<td align="left" width="80" colspan="2"><br></td>
 	</tr>
 	<tr>
-	  <td align="left" width="80"><img src="img/ico_audio.png" width="65"></td><td align="left" width="100%"> <a id="play" >PLAY REC AUDIO</a></td>
+	  <td align="left" width="80"><a id="play" ><img src="img/ico_audio.png" width="65"></a></td><td align="left" width="100%">&nbsp;PLAY REC AUDIO</td>
 	</tr>
 	<tr>
 		<td align="left" width="80" colspan="2"><br></td>
 	</tr>
 	<tr>
-		<td align="left" width="80"><img src="img/ico_video_live.png" width="65"></td><td align="left" width="100%"> <a id="mediacatturavideo" >REC VIDEO</a></td>
+		<td align="left" width="80"><a id="mediacatturavideo" ><img src="img/ico_video_live.png" width="65"></a></td><td align="left" width="100%"> &nbsp;REC VIDEO</td>
 	</tr>
 	<tr>
 		<td align="left" width="80" colspan="2"><br></td>
 	</tr>
 	<tr>
-		<td align="left" width="80"><img src="img/ico_video_www.png" width="65"></td><td align="left" width="100%"> <a id="video">PLAY WWW VIDEO</a></td>
+		<td align="left" width="80"><a id="video"><img src="img/ico_video_www.png" width="65"></a></td><td align="left" width="100%">&nbsp;PLAY WWW VIDEO</td>
 	</tr>
 	<tr>
 		<td align="left" width="80" colspan="2"><br></td>
 	</tr>
 	<tr>
-		<td align="left" width="80"><img src="img/ico_audio_www.png" width="65"></td><td align="left" width="100%"> <a id="audio">PLAY WWW AUDIO</a></td>
+		<td align="left" width="80"><a id="audio"><img src="img/ico_audio_www.png" width="65"></a></td><td align="left" width="100%">&nbsp;PLAY WWW AUDIO</td>
 	</tr>
 	<tr>
 		<td align="left" width="80" colspan="2"><br></td>
@@ -501,6 +501,8 @@
 	
 	<br>
 	<div id="nome" style="display:none"></div>
+	
+	<br><br><br><br>&nbsp;<br>&nbsp;
 	
 		</div>
 	</div>
