--- a/www/index.html
+++ b/www/index.html
@@ -450,6 +450,7 @@
 	  <br>
 	  <!--<button id="cropbutton" type="button">Crop</button>-->
 	  <a id="cropbutton" href="#"><img src="img/taglia.png" width="40"></a>
+      <button id="rotatebutton" type="button">Rotate</button>
 
 	  
 	</form>
