--- a/www/indexFoto.html
+++ b/www/indexFoto.html
@@ -410,8 +410,8 @@
 	
 	<br>
 	
-	<div id="wrapper">
-		<div id="scroller">
+	<!--<div id="wrapper">
+		<div id="scroller">-->
 	
 	<div id="testvideo"></div>
 	
@@ -423,12 +423,11 @@
 	<br>
 	<div id="nome" style="display:none"></div>
 	
-	<br><br><br>
+	<br><br>
+
 	
-	
-	
-	</div>
-		</div>
+	<!--</div>
+		</div>-->
 
 	</center>
 	
