--- a/www/index.html
+++ b/www/index.html
@@ -497,6 +497,14 @@
 	<br><br><br><br>
 	<a id="avanti" href="">AVANTI</a>
 	<br>
+    <br><br>
+    <a id="messaggino" href="">WHAT</a>
+    <br>
+    <br><br>
+    <a id="messaggino2" href="">NUMERO DI CELL ANIA</a>
+    <br><br><br>
+    <a id="messaggino3" href="">NUMERO DI CELL SALVATORE</a>
+    <br>
 	<div id="lati"></div>
 	
 	<br>
