--- a/www/index.html
+++ b/www/index.html
@@ -75,6 +75,18 @@
 		font-family:helvetica;
 	}
 	
+	#footer {
+        position: absolute;
+        z-index: 2;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 48px;
+        background: #9f1e24;
+        padding: 0;
+        border-top: 0px solid #444;
+    }
+	
 	
 	#wrapper {
 		position: absolute;
@@ -158,6 +170,16 @@
 		
 		vertical-align: middle;
 	}
+	
+	.div11 {
+        background-color: #000;
+        height: 52px;
+        border: none;
+        
+        vertical-align: middle;
+    }
+	
+	
 	.div2 {
 		background-color: #FFFFFF;
 	}
