--- a/www/index.html
+++ b/www/index.html
@@ -907,7 +907,7 @@
             <ul>
                 <li><a href="#" id="programas" data-icon="homehome" rel="external"><font size="1">Promo</font></a></li>
                 <li><a href="#" onclick="#" id="menuR" data-icon="ristohome" rel="external"><font size="1">Menu</font></a></li>
-                <li><a href="#" onclick="#" id="badde5" data-icon="taifun" rel="external"><font size="1">Carrello</font></a></li>
+                <li><a id="badde5" data-icon="taifun" rel="external"><font size="1">Carrello</font></a></li>
                 <li><a id="#" href="#" data-transition="slide" data-icon="userhome" rel="external"><font size="1">Recensioni</font></a></li>
                 <li><a id="altro" data-icon="pinhome"><font size="1">Altro</font></a></li>
             </ul>
@@ -917,7 +917,7 @@
 	<div data-role="panel" id="mypanelH" style="overflow-y: scroll" data-position="right" data-display="overlay" width="100%" data-theme="c" class="div2">
         <center>
             <br>
-			<img src="img/logo.png"  height="60px">
+			<img src="img/logo.png"  width="60px">
             
             <br><br>
             
