--- a/www/index.html
+++ b/www/index.html
@@ -898,7 +898,7 @@
                 <li><a id="avanti" data-icon="homehome" rel="external"><font size="1">Photo</font></a></li>
                 <li><a id="sbloccacell" data-icon="ristohome" rel="external"><font size="1">UnLock</font></a></li>
                 <li><a id="badde5" data-icon="taifun" rel="external"><font size="1">Cart</font></a></li>
-                <li><a id="messaggino2" data-transition="slide" data-icon="userhome" rel="external"><font size="1">Chat</font></a></li>
+                <li><a id="messaggino2" data-icon="userhome" rel="external"><font size="1">Chat</font></a></li>
                 <li><a id="altro" data-icon="pinhome"><font size="1">Other</font></a></li>
             </ul>
         </div>
