--- a/www/index.html
+++ b/www/index.html
@@ -771,21 +771,23 @@
 		</div>
         
         <div class="spinner" id="spinner"></div>
-		 <a href="#mypanelH" data-role=button id=btnpanel data-theme="b" style="display:none"></a>
+		<a href="#mypanelH" data-role=button id=btnpanel data-theme="b" style="display:none"></a>
 		
 	<center>
 	
+	<form id="form" name="form" action="entra2.asp" method="post">
+	
 	<div id="contlock" class="contolock" style="display:none" >
-	<br>
-	SBLOCCA CONTENUTO
-	<br>
-	<input type="text" data-role="none" name="pswYTT" id="pswYTT" placeholder="YTT" >
-	<input type="hidden" data-role="none" name="pswVAA" id="pswVAA" placeholder="VAA" >
-	<input type="hidden" data-role="none" name="pswFAA" id="pswFAA" placeholder="FAA" >
-	<input type="hidden" data-role="none" name="pswYTTBLOC" id="pswYTTBLOC" placeholder="pswp" class="scrivo2" >
-	<br>
-	<a href="#" id="richiedi2" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">SBLOCCA</font></a><br>
-	<a href="#" id="annulla33"><font color="#000" size="4">ANNULLA</font></a>
+		<br>
+		SBLOCCA CONTENUTO
+		<br>
+		<input type="text" data-role="none" name="pswYTT" id="pswYTT" placeholder="YTT" >
+		<input type="hidden" data-role="none" name="pswVAA" id="pswVAA" placeholder="VAA" >
+		<input type="hidden" data-role="none" name="pswFAA" id="pswFAA" placeholder="FAA" >
+		<input type="hidden" data-role="none" name="pswYTTBLOC" id="pswYTTBLOC" placeholder="pswp" class="scrivo2" >
+		<br>
+		<a id="richiedi2" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">SBLOCCA</font></a><br>
+		<a id="annulla33"><font color="#000" size="4">ANNULLA</font></a>
 	</div>
 	
 	<div id="celllock" class="contolock" style="display:none" >
@@ -802,25 +804,23 @@
 		
 	<div id="wrapper">
 		<div id="scroller">
-			
-	
-	<form id="form" name="form" action="entra2.asp" method="post">
+
 	<br><br><br><br><br>
 	
 	  <div id="orizzontale" style="display:none">
-      <table width="90%" align="center" border="0">
-      <tr>
-      <td align="center" width="45%">
-	      <input type="text" data-role="none" name="foglia" id="foglia" placeholder="Foglia" class="scrivo">
-      </td>
-      <td align="center" width="10%">
-          <font size="18"><b>::</b></font>
-      </td>
-      <td align="center" width="45%">
-          <input type="text" data-role="none" name="radice" id="radice" placeholder="radice" class="scrivo">
-      </td>
-      </tr>
-      </table>
+		  <table width="90%" align="center" border="0">
+		  <tr>
+		  <td align="center" width="45%">
+			  <input type="text" data-role="none" name="foglia" id="foglia" placeholder="Foglia" class="scrivo">
+		  </td>
+		  <td align="center" width="10%">
+			  <font size="18"><b>::</b></font>
+		  </td>
+		  <td align="center" width="45%">
+			  <input type="text" data-role="none" name="radice" id="radice" placeholder="radice" class="scrivo">
+		  </td>
+		  </tr>
+		  </table>
 	  </div>
 	  
 	  <div id="verticale" >
@@ -846,14 +846,14 @@
 	  
 	  <br><br>
 	  
-	  <a href="#" id="richiedi" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">RICHIEDI</font></a>
+	<a id="richiedi" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">RICHIEDI</font></a>
 	  
-	  <br>
+	<br>
 	<div id="progettolock" style="display:none"><input type="text" data-role="none" name="pswp" id="pswp" placeholder="psw progetto" class="scrivo2" ></div>
 	<div id="microlock" style="display:none"><input type="text" data-role="none" name="pswm" id="pswm" placeholder="pswp" class="scrivo2" ></div>
 	  
 	  
-	  <br>
+	<br>
 			
 	<div id="tutto"></div>
 	
@@ -885,6 +885,8 @@
 	<div id="nome" style="display:none"></div>
 	
 	<br><br><br><br><br><br>
+	
+	<a id="piu" href="">PIU</a>  <a id="piu2" href="">PIU2</a> <a id="piu3" href="">PIU3</a>
 	
 		</div>
 	</div>
