--- a/www/index.html
+++ b/www/index.html
@@ -886,9 +886,9 @@
 	
 	<br><br>
 	
-	<a id="richiedi11" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">RICHIEDI11</font></a>
+	<!--<a id="richiedi11" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">RICHIEDI11</font></a>-->
 	
-	<a id="piu" href="">PIU</a>  <a id="piu2" href="">PIU2</a> <a id="piu3" href="">PIU3</a>
+	<!--<a id="piu" href="">PIU</a>  <a id="piu2" href="">PIU2</a> <a id="piu3" href="">PIU3</a>-->
 	
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	
