--- a/www/index.html
+++ b/www/index.html
@@ -849,9 +849,9 @@
 	<a id="richiedi" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">RICHIEDI</font></a>
 	  
 	<br>
-	<div id="progettolock" style="display:none"><input type="text" data-role="none" name="pswp" id="pswp" placeholder="psw progetto" class="scrivo2" ></div>
-	<div id="microlock" style="display:none"><input type="text" data-role="none" name="pswm" id="pswm" placeholder="pswp" class="scrivo2" ></div>
-	  
+	<div id="progettolock" ><input type="text" data-role="none" name="pswp" id="pswp" placeholder="psw progetto" class="scrivo2" ></div>
+	<div id="microlock" ><input type="text" data-role="none" name="pswm" id="pswm" placeholder="pswp" class="scrivo2" ></div>
+	  <!--style="display:none"-->
 	  
 	<br>
 			
