--- a/www/index.html
+++ b/www/index.html
@@ -777,9 +777,10 @@
 	
 	<form id="form" name="form" action="entra2.asp" method="post">
 	
+	
 	<div id="contlock" class="contolock" style="display:none" >
 		<br>
-		SBLOCCA CONTENUTO
+		<b>SBLOCCA CONTENUTO</b>
 		<br>
 		<input type="text" data-role="none" name="pswYTT" id="pswYTT" placeholder="YTT" >
 		<input type="hidden" data-role="none" name="pswVAA" id="pswVAA" placeholder="VAA" >
@@ -790,9 +791,32 @@
 		<a id="annulla33"><font color="#000" size="4">ANNULLA</font></a>
 	</div>
 	
+	
+	<div id="prolock" class="contolock" style="display:none" >
+		<br>
+		<b>SBLOCCA PROGETTO</b>
+		<br>
+		<input type="text" data-role="none" name="pswp" id="pswp" placeholder="psw progetto" class="scrivo2" >
+		<br>
+		<a id="richiediA" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">SBLOCCA</font></a><br>
+		<a id="annullaA"><font color="#000" size="4">ANNULLA</font></a>
+	</div>
+	
+	
+	<div id="miclock" class="contolock" style="display:none" >
+		<br>
+		<b>SBLOCCA MICROVERBA</b>
+		<br>
+		<input type="text" data-role="none" name="pswm" id="pswm" placeholder="pswp" class="scrivo2" >
+		<br>
+		<a id="richiediB" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">SBLOCCA</font></a><br>
+		<a id="annullaB"><font color="#000" size="4">ANNULLA</font></a>
+	</div>
+	
+	
 	<div id="celllock" class="contolock" style="display:none" >
 		<br>
-		UNLOCK PHONE
+		<b>UNLOCK PHONE</b>
 		<br>
 		<input type="text" data-role="none" name="emailphone" id="emailphone" placeholder="email" >
 		<input type="hidden" data-role="none" name="pswVAA" id="pswVAA" placeholder="VAA" >
@@ -800,8 +824,8 @@
 		<a href="#" id="richiedi22" data-role="button" class="custom-btn" data-theme="b"><font color="red" size="4">UNLOCK</font></a><br>
 		<a href="#" id="annulla22"><font color="#000" size="4">CANCEL</font></a>
 	</div>
-		
-		
+	
+
 	<div id="wrapper">
 		<div id="scroller">
 
@@ -849,9 +873,9 @@
 	<a id="richiedi" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">RICHIEDI</font></a>
 	  
 	<br>
-	<div id="progettolock" ><input type="text" data-role="none" name="pswp" id="pswp" placeholder="psw progetto" class="scrivo2" ></div>
+	<!--<div id="progettolock" ><input type="text" data-role="none" name="pswp" id="pswp" placeholder="psw progetto" class="scrivo2" ></div>
 	<div id="microlock" ><input type="text" data-role="none" name="pswm" id="pswm" placeholder="pswp" class="scrivo2" ></div>
-	  <!--style="display:none"-->
+	  style="display:none"-->
 	  
 	<br>
 			
@@ -971,9 +995,8 @@
                     <b><span id="IDCART"></span></b> - <b><span id="TOTCART">&euro;</span></b> - <b><span id="NOMEORD"></span></b> - <b><span id="QTA"></span></b>
                     <br>
                     <table align="center" width="90%">
-                    <tr><td width="90%"><hr class='div3'></td></tr><tr><td colspan='3' align="center"><!--<a href='#page' onclick='javascript:compraccDemo();' class='zocial cart'></a>--><a id='mandaordine' nome='mandaordine' data-role='button' class='custom-btn' data-theme='b'>Paga con Carta di Credito</a></td></tr><tr><td colspan='3' align="center"><img src='img/paypal.png' width="200px"></td></tr>
-                    <tr><td colspan='3' align='center'><a href="TerminiCondizioni.html" rel="external"><font size='1' color='#000'>Accetto i termini di vendita</font></a></td></tr><tr><td colspan='3' align='center'><a href="TerminiCondizioni.html" rel="external"><font size='1' color='#000'>Informativa sulla Privacy</font></a></td></tr>
-                    
+						<tr><td width="90%"><hr class='div3'></td></tr><tr><td colspan='3' align="center"><!--<a href='#page' onclick='javascript:compraccDemo();' class='zocial cart'></a>--><a id='mandaordine' nome='mandaordine' data-role='button' class='custom-btn' data-theme='b'>Paga con Carta di Credito</a></td></tr><tr><td colspan='3' align="center"><img src='img/paypal.png' width="200px"></td></tr>
+						<tr><td colspan='3' align='center'><a href="TerminiCondizioni.html" rel="external"><font size='1' color='#000'>Accetto i termini di vendita</font></a></td></tr><tr><td colspan='3' align='center'><a href="TerminiCondizioni.html" rel="external"><font size='1' color='#000'>Informativa sulla Privacy</font></a></td></tr>
                     </table>
                     <br><br><br>
                     <a id="cancella" href="">cancella</a>
