--- a/www/index.html
+++ b/www/index.html
@@ -844,9 +844,19 @@
 		<br>
 		<b>SBLOCCA CONTENUTO</b>
 		<br>
-		<input type="text" data-role="none" name="pswYTT" id="pswYTT" placeholder="YTT" >
-		<input type="hidden" data-role="none" name="pswVAA" id="pswVAA" placeholder="VAA" >
-		<input type="hidden" data-role="none" name="pswFAA" id="pswFAA" placeholder="FAA" >
+		<input type="text" data-role="none" name="pswYTT" id="pswYTT" placeholder="You Tube" >
+		<input type="hidden" data-role="none" name="pswVAA" id="pswVAA" placeholder="Video" >
+		<input type="hidden" data-role="none" name="pswFAA" id="pswFAA" placeholder="File Audio" >
+		<input type="hidden" data-role="none" name="pswPWW" id="pswPWW" placeholder="Web" >
+		<input type="hidden" data-role="none" name="pswFBB" id="pswFBB" placeholder="Facebook" >
+		<input type="hidden" data-role="none" name="pswTFF" id="pswTFF" placeholder="Telefono" >
+		<input type="hidden" data-role="none" name="pswTWW" id="pswTWW" placeholder="Twitter" >
+		<input type="hidden" data-role="none" name="pswIGG" id="pswIGG" placeholder="Instagram" >
+		<input type="hidden" data-role="none" name="pswUSS" id="pswUSS" placeholder="Altro" >
+		<input type="hidden" data-role="none" name="pswSVV" id="pswSVV" placeholder="Streaming V" >
+		<input type="hidden" data-role="none" name="pswSAA" id="pswSAA" placeholder="Streaming A" >
+		<input type="hidden" data-role="none" name="pswTMM" id="pswTMM" placeholder="Mobile" >
+		<input type="hidden" data-role="none" name="pswEMM" id="pswEMM" placeholder="Email" >
 		<input type="hidden" data-role="none" name="pswYTTBLOC" id="pswYTTBLOC" placeholder="pswp" class="scrivo2" >
 		<br>
 		<a id="richiedi2" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">SBLOCCA</font></a><br>
