--- a/www/index.html
+++ b/www/index.html
@@ -857,6 +857,12 @@
 		<input type="hidden" data-role="none" name="pswSAA" id="pswSAA" placeholder="Streaming A" >
 		<input type="hidden" data-role="none" name="pswTMM" id="pswTMM" placeholder="Mobile" >
 		<input type="hidden" data-role="none" name="pswEMM" id="pswEMM" placeholder="Email" >
+		
+		<input type="hidden" data-role="none" name="pswUII" id="pswUII" placeholder="Picture" >
+		<input type="hidden" data-role="none" name="pswUDD" id="pswUDD" placeholder="File" >
+		<input type="hidden" data-role="none" name="pswUAA" id="pswUAA" placeholder="Audio" >
+		<input type="hidden" data-role="none" name="pswUVV" id="pswUVV" placeholder="Video" >
+		
 		<input type="hidden" data-role="none" name="pswYTTBLOC" id="pswYTTBLOC" placeholder="pswp" class="scrivo2" >
 		<br>
 		<a id="richiedi2" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">SBLOCCA</font></a><br>
