--- a/www/index.html
+++ b/www/index.html
@@ -807,7 +807,7 @@
 	
 	<form id="form" name="form" action="entra2.asp" method="post">
 	
-		<div id="prolock" class="prolock"  >
+	<div id="prolock" class="prolock"  >
 		<br>
 		<b>SBLOCCA PROGETTO</b>
 		<br>
@@ -815,7 +815,7 @@
 		<br>
 		<a id="richiediA" data-role="button" class="custom-btn" data-theme="b"><font color="#FFF" size="4">SBLOCCA</font></a><br>
 		<a id="annullaA"><font color="#000" size="4">ANNULLA</font></a>
-		</div>
+	</div>
 	
 	
 	<div id="miclock" class="miclock"  >
@@ -834,7 +834,7 @@
 		<b>UNLOCK PHONE</b>
 		<br>
 			<input type="text" data-role="none" name="emailphone" id="emailphone" placeholder="email" >
-			<input type="hidden" data-role="none" name="sblocco" id="sblocco" placeholder="Codice" >
+			<input type="text" data-role="none" name="sblocco" id="sblocco" placeholder="Codice" style="display:none">
 		<br>
 		<a id="richiedi22" data-role="button" class="custom-btn" data-theme="b"><font color="red" size="4">UNLOCK</font></a>
 		<a id="richiedi23" data-role="button" class="custom-btn" data-theme="b" style="display:none"><font color="red" size="4">CODICE</font></a><br>
