--- a/www/index.html
+++ b/www/index.html
@@ -834,10 +834,10 @@
 		<b>UNLOCK PHONE</b>
 		<br>
 			<input type="text" data-role="none" name="emailphone" id="emailphone" placeholder="email" >
-			<input type="text" data-role="none" name="sblocco" id="sblocco" placeholder="Codice" style="display:none">
+			<input type="hidden" data-role="none" name="sblocco" id="sblocco" placeholder="Codice" style="display:none">
 		<br>
-		<a id="richiedi22" data-role="button" class="custom-btn" data-theme="b"><font color="red" size="4">UNLOCK</font></a>
-		<a id="richiedi23" data-role="button" class="custom-btn" data-theme="b" style="display:none"><font color="red" size="4">CODICE</font></a><br>
+		<a id="richiedi22" data-role="button" class="custom-btn" data-theme="b"><font color="red" size="4">UNLOCK</font></a><br>
+		<!--<a id="richiedi23" data-role="button" class="custom-btn" data-theme="b" style="display:none"><font color="red" size="4">CODICE</font></a><br>-->
 		<a href="#" id="annulla22"><font color="#000" size="4">CANCEL</font></a>
 	</div>
 	
