--- a/www/index.html
+++ b/www/index.html
@@ -822,7 +822,7 @@
 		<input type="text" data-role="none" name="pswp" id="pswp" placeholder="Codice" class="testo_contenuti_pw" >
 		
 		<br>
-		 <a id="richiediA" name="button" class="bt_login" width="40%"><font color="#fff">SBLOCCA</font></a><br>
+		 <a id="richiediA" name="button" class="bt_login" width="40%"><font color="#fff">SBLOCCA</font></a><br><br>
 		<a id="annullaA"><font color="#000" size="4">ANNULLA</font></a>
 	</div>
 	
@@ -833,7 +833,7 @@
 		
 		<input type="text" data-role="none" name="pswm" id="pswm" placeholder="Codice" class="testo_contenuti_pw" >
 		<br>
-		<a id="richiediB" name="button" class="bt_login" width="40%"><font color="#fff">SBLOCCA</font></a><br>
+		<a id="richiediB" name="button" class="bt_login" width="40%"><font color="#fff">SBLOCCA</font></a><br><br>
 		<a id="annullaB"><font color="#000">ANNULLA</font></a>
 	</div>
 	
@@ -876,7 +876,7 @@
 		
 		<input type="hidden" data-role="none" name="pswYTTBLOC" id="pswYTTBLOC" placeholder="pswp" class="testo_contenuti_pw">
 		<br>
-		<a id="richiedi2" name="button" class="bt_login" width="40%"><font color="#fff">SBLOCCA</font></a><br>
+		<a id="richiedi2" name="button" class="bt_login" width="40%"><font color="#fff">SBLOCCA</font></a><br><br>
 		<a id="annulla33" class="testo1"><font color="#000">ANNULLA</font></a>
 	</div>
 	
