--- a/www/indexFoto.html
+++ b/www/indexFoto.html
@@ -161,7 +161,14 @@
 		vertical-align: middle;
 	}
 	.div2 {
-		background-color: #FFFFFF;
+		.div2 {
+		background-image: url("img/background.jpg");
+		background-color: #fff;
+		background-size: 100% 100%;
+		background-repeat: no-repeat;
+		background-position:center;
+		height: 100%;
+	}
 	}
 	.div3 {
 		background-color: #37b658;
