--- a/www/index.html
+++ b/www/index.html
@@ -963,7 +963,7 @@
 	
 	</center>
 	
-	 <div id="footer" data-role="footer" data-theme="b" data-tap-toggle="false" data-position="fixed" class="div1">
+	 <div id="footer" data-role="footer" data-theme="b" data-tap-toggle="false" class="div1">
         <div data-role="navbar" class="nav" data-grid="d" data-theme="c" class="div1">
             <ul>
                 <li><a id="avanti" data-icon="homehome" rel="external"><font size="1">Photo</font></a></li>
