--- a/www/indexFoto.html
+++ b/www/indexFoto.html
@@ -394,6 +394,9 @@
 		
 	<center>
 		<form id="form" name="form" action="entra2.asp" method="post">
+        
+        <div id="wrapper">
+			<div id="scroller">
 		
 		<div class="box3">
 			
@@ -442,8 +445,8 @@
 	<br><br>
 
 	
-	<!--</div>
-		</div>-->
+	</div>
+		</div>
 
 	</center>
 	
