--- a/www/indexFoto.html
+++ b/www/indexFoto.html
@@ -380,11 +380,8 @@
 </head>
 
 
-<body id="pippo">
-    <audio id="successSound" src="sound/pool.mp3" type="audio/mpeg" ></audio>
+<body>
 	
-	<div id="page" data-role="page" class="div2" >
-		
 	<div id="page" data-role="page" class="div2" >
 		
 		<div data-role="header" data-theme="c" data-position="fixed" data-tap-toggle="false" class="div11" data-add-back-btn="true" >
@@ -461,9 +458,7 @@
 	
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/Notifiche.js"></script>
-    <script type="text/javascript">
-        app.initialize();
-    </script>
+
 </body>
 
 </html>
