--- a/www/index.html
+++ b/www/index.html
@@ -917,7 +917,7 @@
                       
                       <tr>
                           <td align="center" width="100%">
-                            <input type="text" data-role="none" name="foglia2" id="foglia2" placeholder="toglia" class="input_login_pre">
+                            <input type="text" data-role="none" name="foglia2" id="foglia2" placeholder="foglia" class="input_login_pre">
                                 <span class="doppiopunto">::</span>
                             <input type="text" data-role="none" name="radice2" id="radice2" placeholder="radice" class="input_login_suf">
                           </td>
