--- a/www/index.html
+++ b/www/index.html
@@ -1076,10 +1076,12 @@
 						</tr>
 						<tr>
 							<td align='right' valign="center"><input type="checkbox" name="privacybtn" id="privacybtn"><label for="privacybtn"></label></td>
-							<td width="100%" align='left' valign="center"><p align="center"><a  class="privacy">Accetto i termini di vendita</a></p></td>
+							<td width="100%" align='left' valign="center"><p align="left"><a  class="privacy">Accetto i termini di vendita</a></p></td>
 						</tr>
                         <tr>
-							<td colspan="2"><a id="privacy2" class="privacy">Informativa sulla Privacy</a><br></td>
+                        	<td align='right' valign="center">&nbsp;</td>
+                        
+							<td width="100%" align='left' valign="center"><a id="privacy2" class="privacy">Informativa sulla Privacy</a><br></td>
 						</tr>
 						
                     </table>
