--- a/www/index.html
+++ b/www/index.html
@@ -996,7 +996,7 @@
         <div class="dock">
 			<table class="tabella_dock">
 				<tr>
-					<td class="td_dock"><a id="avanti" style="color:#fff;"><img src="img/ico_dock_gallery.png"><br>Foto</a></td>
+					<td class="td_dock"><a id="avanti" style="color:#fff;"><img src="img/ico_dock_world.png"><br>Foto</a></td>
 					<td class="td_dock"><a id="sbloccacell" style="color:#fff;"><img src="img/ico_dock_unlock.png"><br>Sblocca</td>
 					<td class="td_dock"><a id="badde5" style="color:#fff;"><div id="prova" class="quantity_cart">0</div><img src="img/ico_dock_cart.png"><br>Carrello</td>
 					<td class="td_dock"><a id="messaggino2" style="color:#fff;"><img src="img/ico_dock_chat.png"><br>Chat</td>
