--- a/www/index.html
+++ b/www/index.html
@@ -889,7 +889,7 @@
 		
 		 	  <p align="center"><span class="titolo1">micro<b style="margin:0px 3px;">::</b>verba</span></p>
 
-			  	  <p align="center" class="testo1">Inserisci le due chiavi di ricerca, <i>foglia</i> e <i>radice</i> ai lati del simbolo <b>: :</b> per visualizzare i contenuti del microverba</p>
+			  	  <p align="center" class="testo1">Inserisci le due chiavi di ricerca, <i>foglia</i> e <i>radice</i> ai lati del simbolo <b>: :</b> per visualizzare &nbsp;i contenuti del microverba</p>
 	  
 			  <div id="orizzontale" style="display:none" class="box1">
 
