--- a/www/indexFoto.html
+++ b/www/indexFoto.html
@@ -441,7 +441,7 @@
 	
 	<br><br><br><br>
 	
-	<div id="lati"></div>
+	<div id="lati" style="display:none"></div>
 	
 	<br>
 	<div id="nome" style="display:none"></div>
