--- a/www/index.html
+++ b/www/index.html
@@ -901,6 +901,7 @@
 		<input type="hidden" data-role="none" name="pswUAA" id="pswUAA" placeholder="Audio" class="input_sblocca">
 		<input type="hidden" data-role="none" name="pswUVV" id="pswUVV" placeholder="Video" class="input_sblocca">
 		<input type="hidden" data-role="none" name="pswPNN" id="pswPNN" placeholder="Push" class="input_sblocca">
+		<input type="hidden" data-role="none" name="pswWAA" id="pswWAA" placeholder="Push" class="input_sblocca">
 		
 		<input type="hidden" data-role="none" name="pswYTTBLOC" id="pswYTTBLOC" placeholder="pswp" class="input_sblocca">
 		<br><br>
